[package]
name = "hodoku"
version = "0.1.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = "A simple collection of macros to aid diagnostics during testing."
documentation = "https://docs.rs/hodoku"
readme = "README.md"
homepage = "https://github.com/udoprog/hodoku"
repository = "https://github.com/udoprog/hodoku"
license = "MIT/Apache-2.0"
keywords = ["testing", "no_std"]
categories = ["no-std", "development-tools"]

[lib]
proc-macro = true
path = "src/lib.rs"
